--- a/frontend/week1/website/index.html
+++ b/frontend/week1/website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="frontend/week1/website/assets/style.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -51,17 +51,17 @@
     <h2 class = "how"> How it works </h2>
     <div class="tab1cards">
       <div class="card1">
-        <img src="https://thumbs.dreamstime.com/b/new-member-icon-white-background-create-account-sign-add-contact-symbol-new-user-logo-flat-style-new-member-icon-white-228239625.jpg" alt="safari">
+       <a href ="#"> <img src="https://thumbs.dreamstime.com/b/new-member-icon-white-background-create-account-sign-add-contact-symbol-new-user-logo-flat-style-new-member-icon-white-228239625.jpg" alt="safari"></a>
         <h4><b>Create an account </b></h4>
         <p> Click on the above image and follow the given steps to create your account. </p>
       </div>
       <div class="card1">
-        <img src="https://dcf.wisconsin.gov/files/images/400/blue-policy-icon.png" alt="safari">
+        <a href ="#"><img src="https://dcf.wisconsin.gov/files/images/400/blue-policy-icon.png" alt="safari"> </a>
         <h4><b> Get Authorisation </b></h4>
         <p> Authorise your account using above Authorization token to validate the request. </p>
       </div>
       <div class="card1">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRl1wU5RH6urPCxFlSt14liTG76omx1R0jWTg&usqp=CAU" alt="safari">
+       <a href ="#"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRl1wU5RH6urPCxFlSt14liTG76omx1R0jWTg&usqp=CAU" alt="safari"> </a>
         <h4><b> Enjoy the app </b></h4>
         <p> Buy the products from millions of available choices and enjoy </p>
       </div>
