--- a/frontend/week1/website/index.html
+++ b/frontend/week1/website/index.html
@@ -30,6 +30,7 @@
 
 
    <section class = "sec2">
+           <div id = "side">
     <h2 class="what"> What we do to help our customers in the digital era </h2>
     <div class = "card right">
       <img src="https://img.freepik.com/premium-vector/selling-product-online-e-commerce-website-technology-open-shop-internet-easy-customer-order-payment-happy-business-woman-receiving-many-new-orders-with-boxes-ready-ship_212586-1383.jpg">
@@ -49,6 +50,7 @@
       <p> Buy from 5 Lakh+ available products at affordable price and get upto 50% discount on selected products.<a href="#">Order now</a> </p>
       <a href="#">Learn more </a>
     </div>
+           </div>
    </section>
    <script>
     var slideIndex = 1;
