--- a/frontend/week1/website/index.html
+++ b/frontend/week1/website/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="navbar">
       <a class="logo" href="#"><img src ="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGE4ImlYq3NrYSgO9hAGr_jJUoQS9DGfUQEw&usqp=CAU" width = 100px></a>
-      <a href="#">Contact Us</a>
+      <a href="https://rakeshrkt.github.io/summer-of-code-2023/frontend/week1/website/Assets/About">Contact Us</a>
       <a href="#">About</a>
       <a href="#">Home</a>
     </div>
