--- a/frontend/week1/website/Assets/About.html
+++ b/frontend/week1/website/Assets/About.html
@@ -63,17 +63,13 @@
   </header>
   <main>
     <h1>About Us</h1>
-    <p>Welcome to our eCommerce website! We are a passionate team dedicated to providing you with the best online shopping experience. Our goal is to offer a wide selection of high-quality products at competitive prices, delivered to your doorstep with speed and efficiency.</p>
+    <p>Welcome to our eCommerce website! Our passionate team is dedicated to providing you with the best online shopping experience. We aim to offer a wide selection of high-quality products at competitive prices, delivered to your doorstep with speed and efficiency.</p>
     <p>Our commitment to customer satisfaction drives everything we do. We believe in building long-lasting relationships with our customers and strive to exceed your expectations in every way possible.</p>
-    <p>At our online store, you will find a diverse range of products, from electronics and gadgets to fashion and home essentials. We carefully curate our collection to cater to your various needs and interests.</p>
+    <p>At our online store, you will find various products, from electronics and gadgets to fashion and home essentials. We carefully curate our collection to cater to your various needs and interests.</p>
     <p>If you have any questions, concerns, or feedback, please don't hesitate to contact us. Our customer support team is always ready to assist you and make your shopping experience smooth and enjoyable.</p>
     <p>Thank you for choosing us for your online shopping needs. Happy shopping!</p>
-    <button class="button" onclick="contactUs()">Contact Us</button>
+    <a href = "https://rakeshrkt.github.io/summer-of-code-2023/frontend/week1/website/Assets/Contact_Us"> <button class="button">Contact Us</button> </a>
   </main>
-  <script>
-    function contactUs() {
-      alert("For any inquiries or assistance, please reach out to our customer support team.");
-    }
-  </script>
+  
 </body>
 </html>
