--- a/frontend/week1/website/Assets/Contact_Us.html
+++ b/frontend/week1/website/Assets/Contact_Us.html
@@ -40,6 +40,7 @@
             background-color: #505cdc;
             padding: 10px;
             text-align: right;
+            bottom:0;
         }
 
         footer img {
