--- a/frontend/week1/website/Assets/Contact_Us.html
+++ b/frontend/week1/website/Assets/Contact_Us.html
@@ -133,6 +133,9 @@
 
             // For this example, we'll just display an alert.
             alert('Your message has been sent successfully!');
+            setTimeout(function () {
+            location.reload();
+        }, 2000);
         });
     </script>
 </body>
